name:                bathroute-server
version:             0.1.0.0
synopsis:            Server code for Bathroute Android application.
description:         Server code for Bathroute Android application.
homepage:            http://github.com/Fuuzetsu/bathroute-server
license:             GPL-3
license-file:        LICENSE
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.co.uk
copyright:           (c) Mateusz Kowalczyk, 2014
category:            Bathroute
build-type:          Simple
cabal-version:       >=1.10

executable bathroute-server
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <5, RSA >= 2.0, mtl, HDBC,
                       network-conduit
  hs-source-dirs:      src
  default-language:    Haskell2010